--- a/src/app/book/book.component.scss
+++ b/src/app/book/book.component.scss
@@ -1,5 +1,8 @@
 .book{
-    height: 200px;
+    height: 450px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
 }
 ion-toolbar{
     --background-color:#398101;
