--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -15,15 +15,15 @@
       <ion-card>
           <ion-item class="item">
               <ion-label position="floating">Phone</ion-label>
-              <ion-input type="text" [(ngModel)]="userName"></ion-input>
+              <ion-input type="text" [(ngModel)]="customer.phone"></ion-input>
           </ion-item>
           <ion-item class="item">
               <ion-label position="floating">New Password</ion-label>
-              <ion-input type="password" [(ngModel)]="password"></ion-input>
+              <ion-input type="password" [(ngModel)]="customer.password"></ion-input>
           </ion-item>
           <ion-item class="item">
               <ion-label position="floating">Confirm Password</ion-label>
-              <ion-input type="password" [(ngModel)]="password"></ion-input>
+              <ion-input type="password" [(ngModel)]="customer.password"></ion-input>
           </ion-item>
           <ion-item class="item1" lines="none">
               <ion-button color="success" (click)="save()">Save</ion-button>
