--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,4 +6,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-item class="item1" lines="none">
+    <ion-button color="success" (click)="takePicture()">Take pickture</ion-button>
+</ion-item><br/>
+</ion-content>
