--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,6 +1,8 @@
   <ion-content>
+      <ion-item lines="none">
+        <ion-icon name="arrow-back" color="success" (click)="goBack()"></ion-icon>
+    </ion-item>
       <ion-img class="book" src="{{movie.image_url}}">
-          <ion-icon name="arrow-back" (click)="goBack()"></ion-icon>
       </ion-img><br>
       <ion-item>
           <ion-label position="floating">Name</ion-label>
