--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,15 +15,15 @@
     <ion-card>
         <ion-item class="item">
             <ion-label position="floating">Phone</ion-label>
-            <ion-input type="text" [(ngModel)]="userName"></ion-input>
+            <ion-input type="text" [(ngModel)]="customer.phone"></ion-input>
         </ion-item>
         <ion-item class="item">
             <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" [(ngModel)]="password"></ion-input>
+            <ion-input type="password" [(ngModel)]="customer.password"></ion-input>
         </ion-item>
         <ion-label class="text" (click)="forgot()">Forgot Password ?</ion-label>
         <ion-item class="item1" lines="none">
-            <ion-button color="success" (click)="login()">Login</ion-button>
+            <ion-button color="success" (click)="login(customer)">Login</ion-button>
         </ion-item><br/>
         <ion-label class="text1">New Here?&nbsp;<span class="span" (click)="signup()">Sign Up</span> </ion-label>
     </ion-card>
