--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,24 +3,28 @@
   </ion-item>
   <ion-content class="content">
       <ion-card>
-          <ion-item class="item">
-              <ion-label position="floating">Phone</ion-label>
-              <ion-input type="text"></ion-input>
-          </ion-item>
+            <ion-item class="item">
+                    <ion-label position="floating">Name</ion-label>
+                    <ion-input type="text" [(ngModel)]="customer.name"></ion-input>
+                </ion-item>
           <ion-item class="item">
               <ion-label position="floating">Email</ion-label>
-              <ion-input type="text"></ion-input>
+              <ion-input type="text" [(ngModel)]="customer.email"></ion-input>
           </ion-item>
           <ion-item class="item">
               <ion-label position="floating">Password</ion-label>
-              <ion-input type="password"></ion-input>
+              <ion-input type="password" [(ngModel)]="customer.password"></ion-input>
           </ion-item>
           <ion-item class="item">
-                <ion-label position="floating">DOB</ion-label>
-                <ion-datetime display-format="MMM DD, YYYY HH:mm"></ion-datetime>
+            <ion-label position="floating">Phone</ion-label>
+            <ion-input type="text" [(ngModel)]="customer.phone"></ion-input>
+        </ion-item> 
+          <ion-item class="item">
+                <ion-label position="floating">Address</ion-label>
+                <ion-input type="text" [(ngModel)]="customer.address"></ion-input>
               </ion-item>
           <ion-item class="item1" lines="none">
-              <ion-button color="success">Signup</ion-button>
+              <ion-button color="success" (click)="signUp()">Signup</ion-button>
           </ion-item><br/>
               <ion-label class="text">Or Sign up using</ion-label>
               <ion-icon style="width:20px; height: 20px;" color="primary" name="logo-facebook"></ion-icon>&nbsp;
