--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -13,7 +13,7 @@
 
     <ion-tab-button tab="tab3">
       <ion-icon color="success" name="headset"></ion-icon>
-      <ion-label style="color:#398101">Jukbox</ion-label>
+      <ion-label style="color:#398101">Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
